Fixing dashed line appearance in pattern boxes
The previous implementation caused the dashed vertical line that
is shown in a looped pattern to look different depending on the
browser/platform. In some cases it looked obviously bad (too
thick/thin, or misaligned). The issue seems to have been the 0.5px
border width, as different browsers/platforms seem to display it
differently. However, a 1px border seems to be displayed
consistently.

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -342,7 +342,7 @@ input[type='range'].sequencer-playback-header::-ms-thumb:active {
   height: calc(100% - (5px * 2));
   width: 0;
   margin-top: 5px;
-  border-width: 0 0.5px;
+  border-width: 0 0 0 1px;
   border-color: $black;
   border-style: dashed;
 }
